Fix toolbar alignment.

--- a/org.carewebframework.shell/src/main/resources/web/org/carewebframework/shell/careWeb.css
+++ b/org.carewebframework.shell/src/main/resources/web/org/carewebframework/shell/careWeb.css
@@ -9,6 +9,10 @@
 	border: none;
 }
 
+.cwf-desktop-titlebar>.z-caption-content {
+	width: 100%;
+}
+
 .cwf-desktop-title {
  	border-right: solid 1px gray;
 	padding-top: 6px;
